# aminos

./: .gitignore  README.md  package-lock.json
cmd/anubis/: main.go
lib/: anubis.go  config.go  http.go
lib/mining/: stratum_client.go  utils.go
web/: build.sh  index.go
web/js/: bitcoin-mining.mjs  main.mjs
web/rust-miner/: .gitignore  Cargo.toml  README.md  build.sh
web/rust-miner/src/: lib.rs
