[package]
name = "rust-miner"
version = "0.1.0"
edition = "2021"
description = "Bitcoin miner in WebAssembly for Anubis"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.87"
js-sys = "0.3.64"
getrandom = { version = "0.2", features = ["js"] }
sha2 = "0.10.7"
hex = "0.4.3"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.64", features = ["console"] }

[profile.release]
opt-level = 3
lto = true
